Working compilation grader for CPP Files.